Added appropriate ids to the flags (XML). Changing icons still non functional.

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -37,28 +37,32 @@
             android:layout_weight="1">
 
             <ImageView
-                android:id="@+id/colosseum"
+                android:id="@+id/flagid00"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
-                tools:srcCompat="@drawable/img_00" />
+                tools:srcCompat="@drawable/img_00"
+                android:onClick="SetTeamIcon"/>
+
 
             <ImageView
-                android:id="@+id/pyramids"
+                android:id="@+id/flagid01"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
-                tools:srcCompat="@drawable/img_01" />
+                tools:srcCompat="@drawable/img_01"
+                android:onClick="SetTeamIcon"/>
 
             <ImageView
-                android:id="@+id/tajmahal"
+                android:id="@+id/flagid02"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
-                tools:srcCompat="@drawable/img_02" />
+                tools:srcCompat="@drawable/img_02"
+                android:onClick="SetTeamIcon"/>
         </TableRow>
 
         <TableRow
@@ -67,30 +71,33 @@
             android:layout_weight="1">
 
             <ImageView
-                android:id="@+id/machupichu"
+                android:id="@+id/flagid03"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
-                tools:srcCompat="@drawable/img_03" />
+                tools:srcCompat="@drawable/img_03"
+                android:onClick="SetTeamIcon"/>
 
             <ImageView
-                android:id="@+id/eiffel"
+                android:id="@+id/flagid04"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
-                tools:srcCompat="@drawable/img_04" />
+                tools:srcCompat="@drawable/img_04"
+                android:onClick="SetTeamIcon"/>
 
             <ImageView
-                android:id="@+id/christ"
+                android:id="@+id/flagid05"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
                 android:adjustViewBounds="false"
                 android:cropToPadding="false"
-                tools:srcCompat="@drawable/img_05" />
+                tools:srcCompat="@drawable/img_05"
+                android:onClick="SetTeamIcon"/>
         </TableRow>
 
         <TableRow
@@ -99,28 +106,31 @@
             android:layout_weight="1">
 
             <ImageView
-                android:id="@+id/stonehenge"
+                android:id="@+id/flagid06"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
-                tools:srcCompat="@drawable/img_06" />
+                tools:srcCompat="@drawable/img_06"
+                android:onClick="SetTeamIcon"/>
 
             <ImageView
-                android:id="@+id/pisa"
+                android:id="@+id/flagid07"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
-                tools:srcCompat="@drawable/img_07" />
+                tools:srcCompat="@drawable/img_07"
+                android:onClick="SetTeamIcon"/>
 
             <ImageView
-                android:id="@+id/nazca"
+                android:id="@+id/flagid08"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
-                tools:srcCompat="@drawable/img_08" />
+                tools:srcCompat="@drawable/img_08"
+                android:onClick="SetTeamIcon"/>
         </TableRow>
 
     </TableLayout>
